[project]
name = "wildlife-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chime>=0.7.0",
    "fastapi>=0.128.3",
    "hatchet-sdk>=1.23.0",
    "opencv-python>=4.13.0.92",
    "openvino>=2025.4.1",
    "ultralytics>=8.4.12",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
